# SlurmX

./: .gitignore  CMakeLists.txt  README.md
dependencies/: download_cgroup.sh  download_deps.sh
dependencies/cmake/: CMakeLists.txt
dependencies/cmake/GTest/: CMakeLists.txt
dependencies/cmake/LibEvent/: CMakeLists.txt
dependencies/cmake/abseil/: CMakeLists.txt
dependencies/cmake/cxxopt/: CMakeLists.txt
dependencies/cmake/cxxopts/: CMakeLists.txt
dependencies/cmake/fmt/: CMakeLists.txt
dependencies/cmake/google-test/: CMakeLists.txt
dependencies/cmake/grpc/: CMakeLists.txt
dependencies/cmake/libevent/: CMakeLists.txt
dependencies/cmake/libuv/: CMakeLists.txt
dependencies/cmake/mimalloc/: CMakeLists.txt
dependencies/cmake/mongodb-cxx-driver/: CMakeLists.txt
dependencies/cmake/spdlog/: CMakeLists.txt
docs/: CentOS7-Installation-Guide.md  centos7环境配置.md  job_table.md  slurm_table.txt  表功能.txt
etc/: config.yaml.example  slurmctlxd.service.in  slurmxd.service.in
protos/: PublicDefs.proto  XdSubprocess.proto  opt.proto  opt_stream.proto  slrumx.proto  slrumxd.proto  slurmx.proto  test_grpc.proto
src/: CMakeLists.txt
src/CraneCtld/: CMakeLists.txt  CraneCtld.cpp  CtldPublicDefs.h  DbClient.cpp  DbClient.h
src/Craned/: CMakeLists.txt  Craned.cpp  CranedServer.cpp
src/Misc/Pam/: CMakeLists.txt  Pam.cpp  PamUtil.cpp  PamUtil.h
src/SlurmCtlXd/: CMakeLists.txt  ConcurrentResourceMgr.cpp  ConcurrentResourceMgr.h  CtlXdGrpcServer.cpp  CtlXdGrpcServer.h  CtlXdPublicDefs.h  CtlXdServer.cpp  CtlXdServer.h  DbClient.cpp  DbClient.h  ResourceMgr.cpp  ResourceMgr.h  SlurmCtlXd.cpp  TaskScheduler.cpp  TaskScheduler.h  XdNodeKeeper.cpp  XdNodeKeeper.h  XdNodeMetaContainer.cpp  XdNodeMetaContainer.h
src/SlurmXd/: CMakeLists.txt  CtlXdClient.cpp  CtlXdClient.h  ResourceAllocators.cpp  ResourceAllocators.h  SlurmXd.cpp  TaskManager.cpp  TaskManager.h  XdPublicDefs.h  XdServer.cpp  XdServer.h  slurmxd.cpp
src/SlurmXd/ProcManager/: TaskManager.cpp  TaskManager.h
src/SlurmXd/TaskManager/: TaskManager.cpp  TaskManager.h
src/SqueueX/: CMakeLists.txt  SqueueXClient.cpp  SqueueXClient.h
src/SrunX/: CMakeLists.txt  CommandLineParse.cpp  CommandLineParse.h  OptParse.cpp  OptParse.h  SrunX.cpp  SrunXClient.cpp  SrunXClient.h  Xd.cpp  ctld.cpp  opt_parse.cpp  opt_parse.h
src/Utilities/: cgroup.linux.cpp  cgroup.linux.h  cgroup_limits.cpp  cgroup_limits.h
src/Utilities/AnonymousPipe/: AnonymousPipe.h  CMakeLists.txt
src/Utilities/FileLogger/: CMakeLists.txt  FileLogger.cpp
src/Utilities/FileLogger/include/slurmx/: FileLogger.h
src/Utilities/PublicHeader/: CMakeLists.txt  FdFunctions.cpp  Network.cpp  PublicHeader.cpp  PublicHeader.h  String.cpp  StringParse.cpp
src/Utilities/PublicHeader/include/crane/: PublicHeader.h
src/Utilities/PublicHeader/include/slurmx/: FdFunctions.h  Lock.h  Network.h  Pointer.h  PublicHeader.h  String.h
src/Utilities/TimerSet/: CMakeLists.txt  TimerSet.cpp
src/Utilities/TimerSet/include/slurmx/: TimerSet.h
src/Utilities/cgroup/: CMakeLists.txt  cgroup.linux.cpp  cgroup.linux.h
src/opt_parse/: opt_parse.cpp  opt_parse.h
src/srunX/: CMakeLists.txt  opt_parse.h  opt_server.cpp  slurmxctldserver.cpp  slurmxdserver.cpp  srunXClient.cpp  srunclient.cpp  srunserver.cpp
src/srun_X/: srun_X.cpp  srun_X.h  srun_async_X.cpp  srun_async_X.h
test/: CMakeLists.txt  cgroup_limit_test.cpp  grpc_client_test.cpp  grpc_server_test.cpp  io_redirect_test.cpp
test/CraneCtld/: CMakeLists.txt
test/Craned/: CMakeLists.txt
test/Misc/: CMakeLists.txt  Misc_test.cpp  grpc_example_test.cpp  libevent_example_test.cpp  libuv_test.cpp  mariadb_connector_c_test.cpp  mongodb_test.cpp  yaml_cpp_test.cpp
test/SharedTestImpl/: CMakeLists.txt  greeter_service_impl.cpp
test/SlurmCtlXd/: CMakeLists.txt  NodeSelectionAlgoTest.cpp  XdNodeKeeper_test.cpp  XdNodeMetaContainer_test.cpp  server_keep_alive_test.cpp
test/SlurmXd/: CMakeLists.txt  TaskManager_test.cpp  grpc_example_test.cpp  libevent_example_test.cpp
test/SrunX/: SrunX_test.cpp  opt_parse_test.cpp
test/Utilities/: CMakeLists.txt  PublicHeader_test.cpp  TimerSet_test.cpp  cgroup_limit_test.cpp  network_function_test.cpp
test/opt_parse/: opt_server_test.cpp  opt_test.cpp
test/protos/: CMakeLists.txt  grpc_example.proto
test/srunX/: SrunX.cpp  SrunX_test.cpp  opt_parse_test.cpp  opt_server_test.cpp  srun_test.cpp
test/srun_X/: opt_server_async_test.cpp  srun_async_test.cpp  srun_test.cpp
